fix: change version to v0.0.2